--- a/portfolio.html
+++ b/portfolio.html
@@ -33,12 +33,12 @@
     <!-- preloader -->
 
     <!-- main header -->
-    <header class="main-header style-four">
+    <header class="main-header home-9">
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                    <div class="logo-box pull-left">
-                        <figure class="logo"><a href="index.html"><img src="images/logo-4.png" alt="PLC Lab"></a></figure>
+                    <div class="logo-box pull-left py-5">
+                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -50,11 +50,14 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Accueil</a></li> 
-                                    <li class="dropdown"><a href="#">Services</a>
-                                      <li class="dropdown"><a href="service.html">Services</a>
-                                    
-                                    </li>
+                                    <li class=" dropdown"><a href="index.html">Accueil</a></li> 
+                                    <li class=""><a href="service.html">Services</a>
+                                        <!-- <ul>
+                                            <li><a href="developpement-web.html">Développement Web</a></li>
+                                            <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
+                                            <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
+                                            <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
+                                        </ul> -->
                                     </li>
                                     <li class="dropdown"><a href="#">À propos</a>
                                         <ul>
@@ -63,38 +66,19 @@
                                             <li><a href="valeurs.html">Nos Valeurs</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown current"><a href="#">Portfolio</a>
-                                        <ul>
+                                    <li class="current"><a href="portfolio.html">Portfolio</a>
+                                        <!-- <ul>
                                             <li><a href="projets-web.html">Projets Web</a></li>
                                             <li><a href="projets-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="blog.html">Blog</a></li>                              
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
-                        <div class="menu-right-content clearfix">
-                            <div class="search-box-outer">
-                                <div class="dropdown">
-                                    <button class="search-box-btn" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fas fa-search"></span></button>
-                                    <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                        <li class="panel-outer">
-                                            <div class="form-container">
-                                                <form method="post" action="blog.html">
-                                                    <div class="form-group">
-                                                        <input type="search" name="field-name" value="" placeholder="Rechercher..." required="">
-                                                        <button type="submit" class="search-btn"><span class="fas fa-search"></span></button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="btn-box"><a href="contact.html">Démarrer un projet</a></div>
-                        </div>
+                        <div class="btn-box"><a href="contact.html">Démarrer un projet</a></div>
                     </div>
                 </div>
             </div>
@@ -103,7 +87,9 @@
         <!--sticky Header-->
         <div class="sticky-header">
             <div class="container clearfix">
-                <figure class="logo-box"><a href="index.html"><img src="images/small-logo.png" alt="PLC Lab"></a></figure>
+                <figure class="logo-box"><a href="index.html">
+                    PLC Lab
+                </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
                         <!--Keep This Empty / Menu will come through Javascript-->
