--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
     <!-- preloader -->
 
     <!-- main header -->
-    <header class="main-header style-four">
+    <header class="main-header home-9">
         <div class="outer-container">
             <div class="container">
                 <div class="main-box clearfix">
-                    <div class="logo-box pull-left">
-                        <figure class="logo"><a href="index.html"><img src="images/logo-4.png" alt="PLC Lab"></a></figure>
+                    <div class="logo-box pull-left py-5">
+                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -50,59 +50,31 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li><a href="index.html">Accueil</a></li> 
-                                    <li class="dropdown"><a href="service.html">Services</a>
-                                        <ul>
+                                    <li class=" dropdown"><a href="index.html">Accueil</a></li> 
+                                    <li class=""><a href="service.html">Services</a>
+                                        <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
                                             <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
                                             <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li class="current dropdown"><a href="#">À propos</a>
-                                        <ul>
-                                            <li><a href="notre-equipe.html">Notre Équipe</a></li>
-                                            <li><a href="notre-histoire.html">Notre Histoire</a></li>
-                                            <li><a href="valeurs.html">Nos Valeurs</a></li>
-                                        </ul>
+                                    <li class="current"><a href="about.html">À propos</a>
+                                      
                                     </li>
-                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                        <ul>
+                                    <li class=""><a href="portfolio.html">Portfolio</a>
+                                        <!-- <ul>
                                             <li><a href="projets-web.html">Projets Web</a></li>
                                             <li><a href="projets-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="blog.html">Blog</a></li>                              
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
-                        <div class="menu-right-content clearfix">
-                            <div class="search-box-outer">
-                                <div class="dropdown">
-                                    <button class="search-box-btn" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fas fa-search"></span></button>
-                                    <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
-                                        <li class="panel-outer">
-                                            <div class="form-container">
-                                                <form method="post" action="blog.html">
-                                                    <div class="form-group">
-                                                        <input type="search" name="field-name" value="" placeholder="Rechercher..." required="">
-                                                        <button type="submit" class="search-btn"><span class="fas fa-search"></span></button>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="nav-btn nav-toggler navSidebar-button clearfix">
-                                <span class="icon"></span>
-                                <span class="icon"></span>
-                                <span class="icon"></span>
-                            </div>
-                            <div class="btn-box"><a href="contact.html">Démarrer un projet</a></div>
-                        </div>
+                        <div class="btn-box"><a href="contact.html">Démarrer un projet</a></div>
                     </div>
                 </div>
             </div>
@@ -111,7 +83,9 @@
         <!--sticky Header-->
         <div class="sticky-header">
             <div class="container clearfix">
-                <figure class="logo-box"><a href="index.html"><img src="images/small-logo.png" alt="PLC Lab"></a></figure>
+                <figure class="logo-box"><a href="index.html">
+                    PLC Lab
+                </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
                         <!--Keep This Empty / Menu will come through Javascript-->
@@ -328,40 +302,65 @@
     <!-- clients-style-four end -->
 
     <!-- main-footer -->
-    <footer class="main-footer style-five style-six">
+    <footer class="main-footer style-two style-three">
         <div class="anim-icons">
-            <div class="icon icon-1"><img src="images/icons/pattern-21.png" alt=""></div>
+            <div class="icon icon-1"></div>
+            <div class="icon icon-2"></div>
+            <div class="icon icon-3"></div>
+            <div class="icon icon-4"></div>
+            <div class="icon icon-5"></div>
+            <div class="icon icon-6"></div>
+            <div class="icon icon-7"></div>
+            <div class="icon icon-8"></div>
+            <div class="icon icon-9"></div>
+            <div class="icon icon-10"></div>
         </div>
-        <div class="image-layer" style="background-image: url(images/icons/footer-bg-6.png);"></div>
         <div class="container">
             <div class="footer-top">
                 <div class="widget-section">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
-                                <figure class="footer-logo"><a href="index.html"><img src="images/footer-logo-2.png" alt="PLC Lab"></a></figure>
-                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique.</div>
-                                <div class="apps-download">
-                                    <h3>Téléchargez notre brochure</h3>
-                                    <div class="download-btn">
-                                        <a href="#" class="app-store-btn">
-                                            <i class="fas fa-download"></i>
-                                            <span>Télécharger la</span>
-                                            Brochure PDF
-                                        </a>
-                                    </div>
+                                <figure class="footer-logo"><a href="index.html">
+                                    <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
+                                     <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
+                                </a></figure>
+                                <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
+                                <ul class="social-links">
+                                    <li><h6>Suivez-nous :</h6></li>
+                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                                    <!--<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-github"></i></a></li> -->
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
+                            <div class="links-widget footer-widget">
+                                <h4 class="widget-title">Services</h4>
+                                <div class="widget-content">
+                                    <ul class="list clearfix">
+                                        <li><a href="#">Développement Web</a></li>
+                                        <li><a href="#">Applications Mobiles</a></li>
+                                        <li><a href="#">Logiciels Desktop</a></li>
+                                        <li><a href="#">Solutions Cloud</a></li>
+                                        <li><a href="#">Maintenance & Support</a></li>
+                                        <li><a href="#">Conseil Technique</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-2 col-md-6 col-sm-12 footer-column">
                             <div class="links-widget footer-widget">
-                                <h4 class="widget-title">Services</h4>
+                                <h4 class="widget-title">Liens rapides</h4>
                                 <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><a href="developpement-web.html">Développement Web</a></li>
-                                        <li><a href="applications-mobiles.html">Applications Mobiles</a></li>
-                                        <li><a href="logiciels-desktop.html">Logiciels Desktop</a></li>
-                                        <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
+                                        <li><a href="index.html">Accueil</a></li>
+                                        <li><a href="a-propos.html">À propos</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                        <!-- <li><a href="mentions-legales.html">Mentions légales</a></li> -->
                                     </ul>
                                 </div>
                             </div>
@@ -370,29 +369,20 @@
                             <div class="contact-widget footer-widget">
                                 <h4 class="widget-title">Contact</h4>
                                 <div class="widget-content">
-                                    <ul class="contact-info clearfix">
-                                        <li><i class="fas fa-map-marker-alt"></i> Paris, France</li>
-                                        <li><i class="fas fa-phone"></i><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
-                                        <li><i class="fas fa-envelope"></i><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
-                                    </ul>
-                                </div>
-                                <ul class="social-links clearfix">
-                                    <li><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12 footer-column">
-                            <div class="links-widget footer-widget">
-                                <h4 class="widget-title">Entreprise</h4>
-                                <div class="widget-content">
                                     <ul class="list clearfix">
-                                        <li><a href="notre-equipe.html">Notre Équipe</a></li>
-                                        <li><a href="notre-histoire.html">Notre Histoire</a></li>
-                                        <li><a href="valeurs.html">Nos Valeurs</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
+                                        <li><i class="fas fa-map-marker-alt"></i>Bujumbura , Burundi </li>
+                                        <li>
+                                            <i class="fas fa-phone-volume"></i>
+                                            <a href="tel:+25761103320">+257 61 10 33 20</a>
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-envelope"></i>
+                                            <a href="mailto:plccreativeroom7@gmail.com">plccreativeroom7@gmail.com</a>
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-clock"></i>
+                                            Lun - Ven: 9h00 - 18h00
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -400,58 +390,12 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom clearfix">
-                <ul class="footer-nav pull-right">
-                    <li><a href="mentions-legales.html">Mentions légales</a></li>
-                    <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
-                    <li><a href="cgu.html">CGU</a></li>
-                </ul>
+            <div class="footer-bottom">
+                <div class="copyright">&copy; 2024 <a href="index.html">PLC Lab</a>. Tous droits réservés</div>
             </div>
         </div>
-        <div class="copyright">&copy; 2024 <a href="index.html">PLC Lab</a>. Tous droits réservés</div>
     </footer>
     <!-- main-footer end -->
-
-    <!-- sidebar cart item -->
-    <div class="xs-sidebar-group info-group info-sidebar">
-        <div class="xs-overlay xs-bg-black"></div>
-        <div class="xs-sidebar-widget">
-            <div class="sidebar-widget-container">
-                <div class="widget-heading">
-                    <a href="#" class="close-side-widget">X</a>
-                </div>
-                <div class="sidebar-textwidget">
-                    <div class="sidebar-info-contents">
-                        <div class="content-inner">
-                            <div class="logo">
-                                <a href="index.html"><img src="images/logo-2.png" alt="PLC Lab" /></a>
-                            </div>
-                            <div class="content-box">
-                                <h4>À propos de nous</h4>
-                                <p class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique.</p>
-                                <a href="a-propos.html" class="theme-btn-two">Découvrir</a>
-                            </div>
-                            <div class="contact-info">
-                                <h4>Coordonnées</h4>
-                                <ul>
-                                    <li>Paris, France</li>
-                                    <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
-                                    <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
-                                </ul>
-                            </div>
-                            <ul class="social-box">
-                                <li class="facebook"><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank" class="fab fa-facebook-f"></a></li>
-                                <li class="twitter"><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank" class="fab fa-twitter"></a></li>
-                                <li class="linkedin"><a href="#" class="fab fa-linkedin-in"></a></li>
-                                <li class="github"><a href="#" class="fab fa-github"></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- END sidebar widget item -->
 
     <!--Scroll to top-->
     <button class="scroll-top scroll-to-target" data-target="html">
