--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,7 @@
             <div class="container">
                 <div class="main-box clearfix">
                     <div class="logo-box pull-left py-5">
-                        <figure class="logo-box py-3">
-                            <a href="index.html">
-                               <h2>PLC LAB</h2>
-                            </figure>
+                        <a href="#" class="logo py-3"><h2>PLC <span class="">Lab</span></h2> </a>
                     </div>
                     <div class="menu-area pull-right clearfix">
                         <!--Mobile Navigation Toggler-->
@@ -54,7 +51,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li ><a href="index.html">Accueil</a></li> 
+                                    <li class=" dropdown"><a href="index.html">Accueil</a></li> 
                                     <li class=""><a href="service.html">Services</a>
                                         <!-- <ul>
                                             <li><a href="developpement-web.html">Développement Web</a></li>
@@ -63,19 +60,19 @@
                                             <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="dropdown"><a href="#">À propos</a>
-                                        <ul>
+                                    <li class=""><a href="about.html">À propos</a>
+                                        <!-- <ul>
                                             <li><a href="notre-equipe.html">Notre Équipe</a></li>
                                             <li><a href="notre-histoire.html">Notre Histoire</a></li>
                                             <li><a href="valeurs.html">Nos Valeurs</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                        <ul>
+                                    <li class=""><a href="portfolio.html">Portfolio</a>
+                                        <!-- <ul>
                                             <li><a href="projets-web.html">Projets Web</a></li>
                                             <li><a href="projets-mobiles.html">Applications Mobiles</a></li>
                                             <li><a href="etudes-cas.html">Études de Cas</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a href="blog.html">Blog</a></li>                              
                                     <li class="current"><a href="contact.html">Contact</a></li>
@@ -92,7 +89,7 @@
         <div class="sticky-header">
             <div class="container clearfix">
                 <figure class="logo-box"><a href="index.html">
-                    <h2>PLC LAB</h2>
+                    PLC Lab
                 </a></figure>
                 <div class="menu-area">
                     <nav class="main-menu clearfix">
@@ -265,7 +262,6 @@
 
 
     <!-- main-footer -->
-    <!-- main-footer -->
     <footer class="main-footer style-two style-three">
         <div class="anim-icons">
             <div class="icon icon-1"></div>
@@ -285,7 +281,10 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                             <div class="about-widget footer-widget">
-                                <figure class="footer-logo"><a href="index.html"><img src="images/footer-logo-2.png" alt="PLC Lab"></a></figure>
+                                <figure class="footer-logo"><a href="index.html">
+                                    <!-- <img src="images/footer-logo-2.png" alt="PLC Lab"> -->
+                                     <h2 style="font-size: 3rem;">PLC <span class="text-warning">Lab</span></h2>
+                                </a></figure>
                                 <div class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique et notre approche collaborative.</div>
                                 <ul class="social-links">
                                     <li><h6>Suivez-nous :</h6></li>
@@ -357,57 +356,6 @@
         </div>
     </footer>
     <!-- main-footer end -->
-    <!-- main-footer end -->
-
-
-    <!-- sidebar cart item -->
-    <div class="xs-sidebar-group info-group info-sidebar">
-        <div class="xs-overlay xs-bg-black"></div>
-        <div class="xs-sidebar-widget">
-            <div class="sidebar-widget-container">
-                <div class="widget-heading">
-                    <a href="#" class="close-side-widget">
-                        X
-                    </a>
-                </div>
-                <div class="sidebar-textwidget">
-                    
-                    <!-- Sidebar Info Content -->
-                <div class="sidebar-info-contents">
-                    <div class="content-inner">
-                        <div class="logo">
-                            <a href="index.html"><img src="images/logo-2.png" alt="" /></a>
-                        </div>
-                        <div class="content-box">
-                            <h4>About Us</h4>
-                            <p class="text">Lorem ipsum dolor amet consectetur sed do eiusmod tempor incididunt ut labore. Lorem ipsum dolor amet consectetur adipisicing sed do eiusmod tempor incididunt ut labore.</p>
-                            <a href="#" class="theme-btn-two">Explore</a>
-                        </div>
-                        <div class="contact-info">
-                            <h4>Contact Info</h4>
-                            <ul>
-                                <li>Chicago 12, Melborne City, USA</li>
-                                <li><a href="tel:+8801682648101">+88 01682648101</a></li>
-                                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                            </ul>
-                        </div>
-                        <!-- Social Box -->
-                        <ul class="social-box">
-                            <li class="facebook"><a href="#" class="fab fa-facebook-f"></a></li>
-                            <li class="twitter"><a href="#" class="fab fa-twitter"></a></li>
-                            <li class="linkedin"><a href="#" class="fab fa-linkedin-in"></a></li>
-                            <li class="instagram"><a href="#" class="fab fa-instagram"></a></li>
-                            <li class="youtube"><a href="#" class="fab fa-youtube"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- END sidebar widget item -->
-
 
 
 <!--Scroll to top-->
