--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
                                             <li><a href="solutions-cloud.html">Solutions Cloud</a></li>
                                         </ul> -->
                                     </li>
-                                    <li class="dropdown"><a href="#">À propos</a>
-                                        <ul>
+                                    <li class=""><a href="#">À propos</a>
+                                        <!-- <ul>
                                             <li><a href="notre-equipe.html">Notre Équipe</a></li>
                                             <li><a href="notre-histoire.html">Notre Histoire</a></li>
                                             <li><a href="valeurs.html">Nos Valeurs</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li class=""><a href="portfolio.html">Portfolio</a>
                                         <!-- <ul>
@@ -502,6 +502,46 @@
     </footer>
     <!-- main-footer end -->
 
+        <!-- sidebar cart item -->
+        <div class="xs-sidebar-group info-group info-sidebar">
+            <div class="xs-overlay xs-bg-black"></div>
+            <div class="xs-sidebar-widget">
+                <div class="sidebar-widget-container">
+                    <div class="widget-heading">
+                        <a href="#" class="close-side-widget">X</a>
+                    </div>
+                    <div class="sidebar-textwidget">
+                        <div class="sidebar-info-contents">
+                            <div class="content-inner">
+                                <div class="logo">
+                                    <a href="index.html"><img src="images/logo-2.png" alt="PLC Lab" /></a>
+                                </div>
+                                <div class="content-box">
+                                    <h4>À propos de nous</h4>
+                                    <p class="text">PLC Lab est une startup innovante spécialisée dans le développement de solutions logicielles sur mesure. Nous transformons vos idées en réalité numérique grâce à notre expertise technique.</p>
+                                    <a href="a-propos.html" class="theme-btn-two">Découvrir</a>
+                                </div>
+                                <div class="contact-info">
+                                    <h4>Coordonnées</h4>
+                                    <ul>
+                                        <li>Paris, France</li>
+                                        <li><a href="tel:+33123456789">+33 1 23 45 67 89</a></li>
+                                        <li><a href="mailto:contact@plclab.fr">contact@plclab.fr</a></li>
+                                    </ul>
+                                </div>
+                                <ul class="social-box">
+                                    <li class="facebook"><a href="https://www.facebook.com/share/1CvNBoBngA/" target="_blank" class="fab fa-facebook-f"></a></li>
+                                    <li class="twitter"><a href="https://x.com/PLCLab?t=trNAovDs5Yrij0sd4lMjrw&s=08" target="_blank" class="fab fa-twitter"></a></li>
+                                    <li class="linkedin"><a href="#" class="fab fa-linkedin-in"></a></li>
+                                    <li class="github"><a href="#" class="fab fa-github"></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- END sidebar widget item -->
     <!--Scroll to top-->
     <button class="scroll-top scroll-to-target" data-target="html">
         <span class="fa fa-arrow-up"></span>
