--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     <li class="current dropdown"><a href="index.html">Accueil</a></li>
                                     <li class=""><a href="service.html">Services</a>
                                     </li>
-                                    <li class=""><a href="#">À propos</a>
+                                    <li class=""><a href="about.html">À propos</a>
 
                                     </li>
                                     <li class=""><a href="portfolio.html">Portfolio</a>
@@ -312,7 +312,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 counter-block">
                             <div class="inner-box wow slideInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                                 <div class="count-outer count-box">
-                                    <span class="count-text" data-speed="1500" data-stop="30">0</span><span>+</span>
+                                    <span class="count-text" data-speed="1500" data-stop="5">0</span><span>+</span>
                                 </div>
                                 <h2>Projets réalisés</h2>
                             </div>
@@ -328,7 +328,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 counter-block">
                             <div class="inner-box wow slideInUp" data-wow-delay="600ms" data-wow-duration="1500ms">
                                 <div class="count-outer count-box">
-                                    <span class="count-text" data-speed="1500" data-stop="2">0</span><span>+</span>
+                                    <span class="count-text" data-speed="1500" data-stop="1">0</span><span>+</span>
                                 </div>
                                 <h2>Années d'expérience</h2>
                             </div>
